--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -3908,7 +3908,7 @@ fi
 
 
 
-CFLAGS=" -Wall -pedantic -g -ggdb -pg -O0 -D_DEBUG "
+CFLAGS=" -Wall -pedantic -g -ggdb -pg -O0 -D_DEBUG -I../../libcollections/src/ -lcollections"
 LDFLAGS=""
 
 if test -n "$ac_tool_prefix"; then
